# facecraft

./: .dockerignore  .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-gpu.txt  requirements.txt
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/milestones/v1.0-phases/01-dockerfile-hardening/: 01-01-SUMMARY.md  01-02-SUMMARY.md
.planning/milestones/v1.0-phases/02-build-verify-and-orchestrate/: 02-01-PLAN.md  02-01-SUMMARY.md
.planning/milestones/v1.0-phases/03-publish-and-document/: 03-01-PLAN.md  03-03-PLAN.md  03-03-SUMMARY.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/01-dockerfile-hardening/: 01-01-PLAN.md  01-02-PLAN.md  01-CONTEXT.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-build-verify-and-orchestrate/: 02-02-PLAN.md  02-02-SUMMARY.md  02-RESEARCH.md
.planning/phases/03-publish-and-document/: 03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docker/: Dockerfile.cpu  Dockerfile.gpu
scripts/: smoke-test.sh
src/facecraft/: __init__.py  main.py
src/facecraft/api/: dependencies.py
src/facecraft/api/routes/: __init__.py  health.py  process.py
src/facecraft/api/schemas/: __init__.py  requests.py  responses.py
src/facecraft/core/: __init__.py  config.py  exceptions.py
src/facecraft/processing/: __init__.py  background.py  face_detection.py  face_enhancement.py  photo_enhancement.py  processor.py
